--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.datasource.url=jdbc:h2:~/todo/db;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.continue-on-error=true
-
+spring.datasource.sql-script-encoding=UTF-8
 spring.resources.static-locations=file:../fe/
+
+
+server.port=9000
